Update configs, fix minor issues, and add static assets and docs
- Update Dockerfile, docker-compose.yml, and tsconfig configs
- Fix InventoryAnalysisController and SOPExecutionEntity minor issues
- Refactor sopService.ts and userService.ts
- Add frontend static build assets and PWA files
- Add MES/WMS introduction and benefit docs (images)
- Add ProductionScheduleController backup
- Update prd.txt and local settings

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>